# react-tauri-template

./: .umirc.ts  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
server/: Cargo.toml  tauri.conf.json
server/src/: main.rs
src/: App.css  App.tsx  main.tsx  router.tsx
src/components/: footer.tsx  select.tsx  sider.tsx
src/hooks/: clipboard.tsx
src/pages/Home/: index.tsx
src/pages/Login/: index.tsx
src/pages/Table/: index.tsx
src/pages/Table/components/: CreateForm.tsx  UpdateForm.tsx
src/services/demo/: UserController.ts  typings.d.ts
