[package]
name = "react-tauri-template"
version = "0.1.0"
description = "tauri+vite+react+typescript+antd"
authors = ["atopx"]
repository = "https://github.com/atopx/react-tauri-template"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
